# NOTUSEFULL

./: common.sh  optimize.py  pyexpr.py  start_ray_cluster.py  stop_time_expectation.py  timeconvert.py
CNN/: CNN1.py  CNNBase.py
HeatMap_release/: Stock_HeatMap.py  test.py  test_exp_signal.py  trade_test.py
INLIB/: inlib.py  result.csv  result_full.csv  result_full1.csv
IO_RELATED_FRAME/: App4FactorTestLocal.py  settings.py
ML/: LSTM.py  LSTM_L2.py  LSTM_L2_norm.py  Transformer.py  db.py  lstm.py  regress.py  regress1.py  tcn.py
SUBMIT_ZOEY/: CMakeLists.txt  README.txt  compile.sh
SUBMIT_ZOEY/DATA/: a.out  main.cpp  output1_from_EXE4.csv  output_from_EXE2.csv  output_from_EXE3_AAPL.csv  output_from_EXE3_GOOG.csv  output_from_EXE3_JPM.csv  output_from_EXE4.csv  output_from_EXE5.csv
SUBMIT_ZOEY/DOC_ZOEY/: b.aux  b.tex  b.toc  c.aux  c.tex
SUBMIT_ZOEY/DOC_ZOEY/IMG/: mv.sh
SUBMIT_ZOEY/DOC_ZOEY/trash/: b.tex
SUBMIT_ZOEY/SRC/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
SUBMIT_ZOEY/SRC/framework/: graphnode.cc  graphnode.h  niobase.h  register.cc  register.h  registerdata.cc  registerdata.h  util.cc  util.h
codes/: log
compress_test/: dataprovider.py  test_hbase_compress.py
cudf/: buyorder_withdraw_tsstat8_v1.py  buyorder_withdraw_tsstat8_v1_2.py  buyorder_withdraw_tsstat8_v1_3.py  lly_trans_8_skew.py  lly_trans_8_std.py  lyt_order_thickness_2.py  make_data.py  tt.py  tt_ray.py  wcx_tick_tradelogic_10.py  wcx_tick_tradelogic_10_1.py  wcx_tick_tradelogic_10_3.py  wcx_tick_tradelogic_10_6.py  wcx_tick_tradelogic_14_6.py
daily_demo/: AmKline.py  __dataprovider_config.py  __jurisdictionData_config.py  __mdcdataprovider_config.py  __xquant_config.py  bond.py  chara.py  compare_hdfs_col.py  conn.py  factor1.py  factor_add.py  fund.py  future.py  gem.py  get_factor_value_ray.py  h5.py  load_marketdata_loop.py  market.py  market_constant.py  mm.py  mp_hdfsfile.py  mp_marketdata.py  multicore_test.py  opdata.py  quant_data.py  stream.py  test_fic.py  test_helper_link.py  test_ray.py  third_factordata.py  third_market.py  third_onperiod.py  tmp.py  tt.py
exp_assembles-master/: get_model_configs.py  setup.py  test.py
factor_ana/: log.py  tttt.py  update_concensus_htsc.py  update_index_weight_xquant.py  update_wind_htsc.py  update_wind_htsc_news.py  update_wind_htsc_second_job.py  update_wind_weekend.py
gplearn_xc/: create_train_data.py  fitness.py  main_gp_hc_month.py  my_test.py  run_result.py  run_result_save.py
marketdata_hist/: get_his.py  merge_hist.py  save_parquet_hdfs.py  save_parquet_mdtime.py  save_parquet_nas_stock.py
multifactor/: .gitignore  readme
myFactor/: App.py  settings.py
new_alpha_invest/: log
parallel_train-v2.0/: tensorflow_actor_test.py  tensorflow_task_test.py  torch_actor_test.py  torch_task_test.py
resource/: Login.dos  dolphindb.lic  start.sh  xquant_conf
resource/ats-quant-factor-engine/atsfactor/: CMakeLists.txt  cmake_pyarrow.py  generate_factor_types.py  generate_param_file.py
resource/ats-quant-factor-engine/atsfactor/cmake/: config.cmake
resource/ats-quant-factor-engine/atsfactor/example/: main.cpp  myfactor.h
resource/ats-quant-factor-engine/atsfactor/include/huatai/atsquant/: common_type_def.h  factor.h  market_data_def.h
resource/ats-quant-factor-engine/atsfactor/include/huatai/atsquant/factor/: all_factors.h.j2  base_factor.h  common.h  compute.h  datetime.h  factor_manager.h  market_data_manager.h  schema.h  simple_regression.h  sliding_window.h  type_traits.h.j2  util.h
resource/ats-quant-factor-engine/atsfactor/include/huatai/atsquant/factor/custom/: FactorActivePV.h  FactorAlpha101World041.h  FactorAsk1StdLS.h  FactorAvgOutRatio_n_tick20.h  FactorBOVwapGap.h  FactorBSCorr30.h  FactorBearPower_n_tick10.h  FactorBidAskSpread_n_tick10.h  FactorBookBuy13MoveQtyDeltaSum.h  FactorBookBuy15Move1QtyDeltaDy0TickQtyRatio.h  FactorBookBuy15MoveQtyDeltaSum.h  FactorBookBuyMaxQtyPxDwDelta.h  FactorBookBuyQtySumQtyMaxPxMuity.h  FactorBookBuySell15QtyRatiomaxsize.h  FactorBookBuySumQtyLastPreRatio.h  FactorBookSell15Move1QtyDeltaDy0TickQtyRatio.h  FactorBookSellMaxQtyPriceQtyDelta.h  FactorBookSellMaxQtyPxPxRatio.h  FactorBookSellQtySumQtyMaxPxMuity.h  FactorBookSellSumQtyLastPreRatio.h  FactorBuyDetrend_Cgw.h  FactorBuyNumCorr3.h  FactorBuyOfferQtyGap_Cgw.h  FactorBuyOrderQtyMeanLS.h  FactorBuyOrderQtyStd_n_tick10.h  FactorBuySellOrderQtyRatio.h  FactorBuySellOrderQtyRatioDiff.h  FactorBuyVolumeAvgLS.h  FactorBuyWillingByMoneyEn1.h  FactorBuyWillingByPrice.h  FactorCMO_timePeriod20.h  FactorChangeSumLS.h  FactorDownCount_n_tick20.h  FactorGtjaAlpha015_n_tick20.h  FactorGtjaAlpha046.h  FactorGtjaAlpha047_n_tick10.h  FactorGtjaAlpha057_n_tick10.h  FactorGtjaAlpha078.h  FactorGuangFaTechIndicatorAPZ_n_tick10.h  FactorGuangFaTechIndicatorAPZ_n_tick30.h  (+47 more)
resource/ats-quant-factor-engine/atsfactor/include/huatai/atsquant/factor/nonfactor/: FactorSecBuySellNum.h  FactorSecOrderBook.h  FactorSecTradeAgg.h  FactorSeqNo.h
resource/ats-quant-factor-engine/atsfactor/src/: bindings.cpp  factor.cpp  factor_manager.cpp  market_data_manager.cpp  simple_regression.cpp
resource/ats-quant-factor-engine/atsfactor/test/: compute_test.cpp  factor_manager_test.cpp  factor_test.cpp  market_data_manager_test.cpp  sliding_window_test.cpp  util_test.cpp
tquant-3.2.0/: setup.py
wind_download/: FDD_qtr_with_caculation.py  H5DataCompare.py  bak_file.py  checkRank.py  copy_file.py  get_dividend.py  link.py  risk_utility.py  settings.py  update_barra_risk.py  update_index_weight.py  update_master.py  update_master_weekend.py  update_suntime.py  update_wind.py  update_wind_htsc.py  (+3 more)
xdb/xdb-cpp/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
xdb/xdb-cpp/xdb/: CMakeLists.txt  Makefile  cmake_install.cmake
xdb/xdb-cpp/xdb/include/: factor.h  file_util.h  market_types.h  xdb.h
xdb/xdb-cpp/xdb/src/: xdb_reader.cpp  xdb_writer.cpp
xdb/xdb-cpp/xdb/zstd/: Makefile  cmake_install.cmake
xdb/xdb-cpp/xdb/zstd/lib/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  libzstd.pc  libzstd.so.1.4.3
(+4510 files in other folders)
